--- a/9991_agents_reflexion.ipynb
+++ b/9991_agents_reflexion.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "id": "1b64a6f6-1d32-48be-92b5-66c3b04b17f7",
    "metadata": {},
    "outputs": [
@@ -58,18 +58,19 @@
     }
    ],
    "source": [
-    "%pip install -U --quiet langgraph langchain_anthropic tavily-python"
+    "%pip install -qU langgraph langchain_anthropic tavily-python langchain_openai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "a917bb70-f84c-48e6-8d32-d14f9df2ca2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import getpass\n",
     "import os\n",
+    "import json\n",
     "\n",
     "\n",
     "def _set_if_undefined(var: str) -> None:\n",
@@ -99,18 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "id": "567b6c4a",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_anthropic import ChatAnthropic\n",
     "\n",
-    "llm = ChatAnthropic(model=\"claude-3-5-sonnet-20240620\")\n",
+    "# llm = ChatAnthropic(model=\"claude-3-5-sonnet-20240620\")\n",
     "# You could also use OpenAI or another provider\n",
-    "# from langchain_openai import ChatOpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "# llm = ChatOpenAI(model=\"gpt-4-turbo-preview\")"
+    "llm = ChatOpenAI(model=\"gpt-4o\")"
    ]
   },
   {
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "id": "5a2ac853-b8a6-40de-b7fe-3f9f3c5ca4d2",
    "metadata": {},
    "outputs": [],
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "id": "5fffa8d5-068a-4f0b-adfc-b4daf30ef294",
    "metadata": {},
    "outputs": [],
@@ -192,6 +193,7 @@
     "from langchain_core.output_parsers.openai_tools import PydanticToolsParser\n",
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "from pydantic import ValidationError\n",
+    "import json  # Add this import\n",
     "\n",
     "from pydantic import BaseModel, Field\n",
     "\n",
@@ -229,11 +231,12 @@
     "                self.validator.invoke(response)\n",
     "                return {\"messages\": response}\n",
     "            except ValidationError as e:\n",
-    "                state = state + [\n",
+    "                state['messages'] = state['messages'] + [\n",
     "                    response,\n",
     "                    ToolMessage(\n",
     "                        content=f\"{repr(e)}\\n\\nPay close attention to the function schema.\\n\\n\"\n",
-    "                        + self.validator.schema_json()\n",
+    "                        # Convert dict to string\n",
+    "                        + json.dumps(self.validator.model_json_schema())\n",
     "                        + \" Respond by fixing all validation errors.\",\n",
     "                        tool_call_id=response.tool_calls[0][\"id\"],\n",
     "                    ),\n",
@@ -243,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "id": "4a0264b8-ed2d-4f15-9d3c-085aa3a5edab",
    "metadata": {},
    "outputs": [],
@@ -284,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "id": "5922e1fe-7533-4f41-8b1d-d812707c1968",
    "metadata": {},
    "outputs": [],
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "id": "2605fd8d-c663-446f-ba25-751190195749",
    "metadata": {},
    "outputs": [],
@@ -347,17 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "id": "6fd51f17-c0b0-44b6-90e2-55a66cb8f5a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content=[{'text': 'Okay, let me revisit the original question and provide a final revised answer:', 'type': 'text'}, {'id': 'toolu_018ct21qSxQbrGneLsHgML3F', 'input': {'answer': 'Reflection is a vital capability that enables AI systems to reliably operate in complex, open-ended environments by continuously learning and improving over time. The key benefits of reflective AI include:\\n\\n1) Self-Evaluation - By reflecting on their outputs, decisions, and real-world outcomes, AI can identify flaws, biases, or knowledge gaps in their training data or models [1].\\n\\n2) Continuous Learning - Reflection allows AI to extract insights from new experiences and use those insights to update their knowledge bases, decision algorithms, and future behaviors [2].\\n\\n3) Value Alignment - For AI interacting with humans, reflection on feedback and impacts enables adjusting actions to better align with human values and environmental contexts [3]. \\n\\n4) Contextual Decision-Making - Rather than following rigid rules, reflection empowers AI to reason about nuances, edge cases, and unusual situations to make more appropriate contextual decisions [4].\\n\\nModern neural architectures support reflection through components like:\\n- Separate \"reflection networks\" that critique a primary network\\'s outputs and suggest refinements.\\n- Attention over previous inputs/outputs to contextualize new decisions.\\n- Neuro-symbolic approaches combining neural modules with explicit, updateable knowledge bases [5].\\n\\nLarge language models with their broad knowledge are also exhibiting emergent reflective capabilities by drawing analogies across domains to self-evaluate and course-correct [6].\\n\\nReferences:\\n[1] https://arxiv.org/abs/1711.07184\\n[2] https://arxiv.org/abs/2111.09470  \\n[3] https://arxiv.org/abs/2107.07413\\n[4] https://arxiv.org/abs/2205.07379\\n[5] https://arxiv.org/abs/2211.06176\\n[6] https://arxiv.org/abs/2303.04047', 'reflection': {'missing': 'I believe the revised answer now comprehensively covers the key motivations and approaches for enabling reflection in AI systems, supported by specific research citations. It addresses the high-level benefits as well as technical implementation details.', 'superfluous': 'The examples and explanations seem concise and focused without extraneous detail.'}, 'references': ['https://arxiv.org/abs/1711.07184', 'https://arxiv.org/abs/2111.09470', 'https://arxiv.org/abs/2107.07413', 'https://arxiv.org/abs/2205.07379', 'https://arxiv.org/abs/2211.06176', 'https://arxiv.org/abs/2303.04047'], 'search_queries': ['research on reflection and self-monitoring in large language models', 'neuro-symbolic approaches for reflective AI systems']}, 'name': 'ReviseAnswer', 'type': 'tool_use'}], additional_kwargs={}, response_metadata={'id': 'msg_01EvaYmDuiauj7tTt6C3yC9e', 'model': 'claude-3-sonnet-20240229', 'stop_reason': 'tool_use', 'stop_sequence': None, 'usage': {'input_tokens': 3898, 'output_tokens': 718}}, id='run-bbbb4274-3b81-4de4-b6ce-a06b26285f90-0', tool_calls=[{'name': 'ReviseAnswer', 'args': {'answer': 'Reflection is a vital capability that enables AI systems to reliably operate in complex, open-ended environments by continuously learning and improving over time. The key benefits of reflective AI include:\\n\\n1) Self-Evaluation - By reflecting on their outputs, decisions, and real-world outcomes, AI can identify flaws, biases, or knowledge gaps in their training data or models [1].\\n\\n2) Continuous Learning - Reflection allows AI to extract insights from new experiences and use those insights to update their knowledge bases, decision algorithms, and future behaviors [2].\\n\\n3) Value Alignment - For AI interacting with humans, reflection on feedback and impacts enables adjusting actions to better align with human values and environmental contexts [3]. \\n\\n4) Contextual Decision-Making - Rather than following rigid rules, reflection empowers AI to reason about nuances, edge cases, and unusual situations to make more appropriate contextual decisions [4].\\n\\nModern neural architectures support reflection through components like:\\n- Separate \"reflection networks\" that critique a primary network\\'s outputs and suggest refinements.\\n- Attention over previous inputs/outputs to contextualize new decisions.\\n- Neuro-symbolic approaches combining neural modules with explicit, updateable knowledge bases [5].\\n\\nLarge language models with their broad knowledge are also exhibiting emergent reflective capabilities by drawing analogies across domains to self-evaluate and course-correct [6].\\n\\nReferences:\\n[1] https://arxiv.org/abs/1711.07184\\n[2] https://arxiv.org/abs/2111.09470  \\n[3] https://arxiv.org/abs/2107.07413\\n[4] https://arxiv.org/abs/2205.07379\\n[5] https://arxiv.org/abs/2211.06176\\n[6] https://arxiv.org/abs/2303.04047', 'reflection': {'missing': 'I believe the revised answer now comprehensively covers the key motivations and approaches for enabling reflection in AI systems, supported by specific research citations. It addresses the high-level benefits as well as technical implementation details.', 'superfluous': 'The examples and explanations seem concise and focused without extraneous detail.'}, 'references': ['https://arxiv.org/abs/1711.07184', 'https://arxiv.org/abs/2111.09470', 'https://arxiv.org/abs/2107.07413', 'https://arxiv.org/abs/2205.07379', 'https://arxiv.org/abs/2211.06176', 'https://arxiv.org/abs/2303.04047'], 'search_queries': ['research on reflection and self-monitoring in large language models', 'neuro-symbolic approaches for reflective AI systems']}, 'id': 'toolu_018ct21qSxQbrGneLsHgML3F', 'type': 'tool_call'}], usage_metadata={'input_tokens': 3898, 'output_tokens': 718, 'total_tokens': 4616})"
+       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_IZXffoSPWA5HQFw3VZN8uU60', 'function': {'arguments': '{\"answer\": \"Reflection is crucial in AI as it enhances self-assessment and adaptability. Through methods like the Reflection Pattern, AI models can generate outputs, critique them, and refine responses in iterative cycles, significantly improving output quality [5]. Techniques such as Reflexion utilize verbal feedback to enable language agents to learn from mistakes, mimicking human-like reflective processes [1]. Reflection agent prompting allows AI systems to self-evaluate, improving decision-making and adaptability through feedback loops and memory mechanisms [2]. In trading algorithms, this reflective ability enables AI agents to refine strategies based on market feedback, showcasing its practical applications [2].\\\\n\\\\nFurthermore, reflection aids in unexpected situations by allowing systems to adapt their behavior in response to new data or outcomes, a capability fundamental to intelligent systems [3]. AI-induced reflection also contributes to augmenting human decision-making, as seen in diagnostic work, offering a unique perspective on how AI systems can enhance human reflectiveness and effectiveness [4].\\\\n\\\\nOverall, reflection not only bolsters AI decision-making and learning efficiency but also provides frameworks for transparent and human-like logic adaptation, ensuring AI can operate effectively in varying contexts.\", \"reflection\": {\"missing\": \"The answer could delve deeper into the technical specifics of the Reflection Pattern and how exactly feedback loops are implemented across different AI applications. Also, including additional practical examples of these reflective systems in action, other than trading algorithms, would provide a broader understanding.\", \"superfluous\": \"While each point is relevant, the answer could streamline the introduction by integrating the explanation of the Reflection Pattern into the broader discussion of reflection strategies, to avoid repetition and overlap.\"}, \"search_queries\": [\"reflection patterns in AI systems\", \"implementation of feedback loops in AI\", \"examples of AI reflection in practice\"], \"references\": [\"https://medium.com/@krtarunsingh/a-new-era-of-ai-learning-reflexions-path-to-smarter-systems-49bf6a5881c3\", \"https://www.akira.ai/blog/reflection-agent-prompting\", \"https://arxiv.org/html/2410.16270v1\", \"https://aisel.aisnet.org/misq/vol47/iss4/5/\", \"https://www.analyticsvidhya.com/blog/2024/10/agentic-ai-reflection-pattern/\"]}', 'name': 'ReviseAnswer'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 485, 'prompt_tokens': 1627, 'total_tokens': 2112, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_f9f4fb6dbf', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-819bb614-3c90-486e-842e-7d278792e9e8-0', tool_calls=[{'name': 'ReviseAnswer', 'args': {'answer': 'Reflection is crucial in AI as it enhances self-assessment and adaptability. Through methods like the Reflection Pattern, AI models can generate outputs, critique them, and refine responses in iterative cycles, significantly improving output quality [5]. Techniques such as Reflexion utilize verbal feedback to enable language agents to learn from mistakes, mimicking human-like reflective processes [1]. Reflection agent prompting allows AI systems to self-evaluate, improving decision-making and adaptability through feedback loops and memory mechanisms [2]. In trading algorithms, this reflective ability enables AI agents to refine strategies based on market feedback, showcasing its practical applications [2].\\n\\nFurthermore, reflection aids in unexpected situations by allowing systems to adapt their behavior in response to new data or outcomes, a capability fundamental to intelligent systems [3]. AI-induced reflection also contributes to augmenting human decision-making, as seen in diagnostic work, offering a unique perspective on how AI systems can enhance human reflectiveness and effectiveness [4].\\n\\nOverall, reflection not only bolsters AI decision-making and learning efficiency but also provides frameworks for transparent and human-like logic adaptation, ensuring AI can operate effectively in varying contexts.', 'reflection': {'missing': 'The answer could delve deeper into the technical specifics of the Reflection Pattern and how exactly feedback loops are implemented across different AI applications. Also, including additional practical examples of these reflective systems in action, other than trading algorithms, would provide a broader understanding.', 'superfluous': 'While each point is relevant, the answer could streamline the introduction by integrating the explanation of the Reflection Pattern into the broader discussion of reflection strategies, to avoid repetition and overlap.'}, 'search_queries': ['reflection patterns in AI systems', 'implementation of feedback loops in AI', 'examples of AI reflection in practice'], 'references': ['https://medium.com/@krtarunsingh/a-new-era-of-ai-learning-reflexions-path-to-smarter-systems-49bf6a5881c3', 'https://www.akira.ai/blog/reflection-agent-prompting', 'https://arxiv.org/html/2410.16270v1', 'https://aisel.aisnet.org/misq/vol47/iss4/5/', 'https://www.analyticsvidhya.com/blog/2024/10/agentic-ai-reflection-pattern/']}, 'id': 'call_IZXffoSPWA5HQFw3VZN8uU60', 'type': 'tool_call'}], usage_metadata={'input_tokens': 1627, 'output_tokens': 485, 'total_tokens': 2112, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,10 +403,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "id": "fccd6a17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ToolNode' from 'langgraph.prebuilt' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[69], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StructuredTool\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlanggraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprebuilt\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ToolNode\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mrun_queries\u001b[39m(search_queries: \u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m], \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m      7\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Run the generated queries.\"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ToolNode' from 'langgraph.prebuilt' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.tools import StructuredTool\n",
     "\n",
